5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1577_1559.log
== TEST (2019-03-26 18:18:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print.upper((frase.???))
-- ERROR:
File "XXXX", line 2
    print.upper((frase.???))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:18:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print.upper((frase.???))
-- EXECUTION TIME:
0.164349
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print.upper((frase.???))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:05) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase.???))
-- ERROR:
File "XXXX", line 2
    print(.upper(frase.???))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:19:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase.???))
-- EXECUTION TIME:
0.168728
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(.upper(frase.???))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper(???))
-- ERROR:
File "XXXX", line 2
    print(frase..upper(???))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:35) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper(???))
-- EXECUTION TIME:
0.240627
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase..upper(???))
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:42) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper())
-- EXECUTION TIME:
0.183485
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase..upper())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper())
-- ERROR:
File "XXXX", line 2
    print(frase..upper())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper())
-- EXECUTION TIME:
0.133522
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase..upper())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:21:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:21:26) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.113483
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
